--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.h2.console.path=/h2-console
 # File Upload
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+# Static Resources Configuration
+spring.web.resources.static-locations=file:/opt/update-server/downloads/
+spring.mvc.static-path-pattern=/downloads/**
+
+# Optional: Disable caching for development
+spring.web.resources.cache.period=0
