--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,24 @@
 spring.application.name=update-server
 server.port=8080
 
-# Database (??????? - H2)
-spring.datasource.url=jdbc:h2:file:./data/updatedb
+# Database Configuration for production
+#spring.datasource.url=jdbc:mysql://localhost:3306/server_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=m13ido
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Database (??????? - H2) for test
+spring.datasource.url=jdbc:h2:file:./data/server_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # H2 Console
 spring.h2.console.enabled=true
