--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,18 @@ spring.application.name=update-server
 server.port=8080
 
 # Database Configuration for production
-#spring.datasource.url=jdbc:mysql://localhost:3306/server_db?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=m13ido
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/server_db?createDatabaseIfNotExist=true
+spring.datasource.username=accounting_user
+spring.datasource.password=Msf@1391984
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database (??????? - H2) for test
-spring.datasource.url=jdbc:h2:file:./data/server_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:file:./data/server_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -22,8 +22,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 # File Upload
 spring.servlet.multipart.max-file-size=100MB
@@ -35,3 +35,11 @@ spring.mvc.static-path-pattern=/downloads/**
 
 # Optional: Disable caching for development
 spring.web.resources.cache.period=0
+
+# logging
+logging.level.root=INFO
+logging.level.com.hamza.updateserver=DEBUG
+logging.file.name=/var/log/update-server.log
+
+# api config
+api.base-url=http://164.92.230.242:8080/api
