Refactor activation deletion logic and update database configuration
Replaced `delete` method in `ActivationService` with `deleteById` and added a new `DELETE` endpoint in `ActivationController`. Updated production database configuration in `application.properties` and adjusted POM comments for clarity.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.application.name=update-server
 server.port=8080
 
 # Database Configuration for production
-spring.datasource.url=jdbc:mysql://localhost:3306/server_db?createDatabaseIfNotExist=true
-spring.datasource.username=accounting_user
-spring.datasource.password=Msf@1391984
+# root Msf@1391984
+spring.datasource.url=jdbc:mysql://localhost:3306/accounting_master?createDatabaseIfNotExist=true
+#spring.datasource.username=accounting_user
+#spring.datasource.password=Msf@1391984
+spring.datasource.username=root
+spring.datasource.password=m13ido
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
